[gd_scene load_steps=6 format=2]

[ext_resource path="res://FreePeoplesUnion Logo.png" type="Texture" id=1]
[ext_resource path="res://LoginHandler.gd" type="Script" id=2]
[ext_resource path="res://Members.tscn" type="PackedScene" id=3]
[ext_resource path="res://Register New User.tscn" type="PackedScene" id=4]
[ext_resource path="res://UserDelay.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entry" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.405
margin_top = -299.405
margin_right = 300.595
margin_bottom = 300.595
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Entry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -224.0
margin_right = 195.0
margin_bottom = 54.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLogin" type="Button" parent="Entry"]
margin_left = 149.0
margin_top = 436.0
margin_right = 295.0
margin_bottom = 476.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Welcome" type="TextEdit" parent="Entry"]
margin_left = 111.037
margin_top = 18.4545
margin_right = 468.037
margin_bottom = 82.4545
text = "Welcome to the Free Peoples Union Member Portal!

Do not share your password even with Directors!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNew" type="Button" parent="Entry"]
margin_left = 132.0
margin_top = 482.0
margin_right = 470.0
margin_bottom = 523.0
text = "New? Register Here!"

[node name="ButtonHint" type="Button" parent="Entry"]
margin_left = 310.0
margin_top = 436.0
margin_right = 455.0
margin_bottom = 475.0
text = "Password Hint"

[node name="HBoxContainer" type="HBoxContainer" parent="Entry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.716
margin_top = 61.3378
margin_right = 223.284
margin_bottom = 120.338
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextUsername" type="LineEdit" parent="Entry/HBoxContainer"]
margin_right = 58.0
margin_bottom = 59.0
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPassword" type="LineEdit" parent="Entry/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 59.0
secret = true
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Members" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Register" parent="." instance=ExtResource( 4 )]
visible = false

[node name="UserDelay" type="Timer" parent="."]
one_shot = true
script = ExtResource( 5 )

[connection signal="pressed" from="Entry/ButtonLogin" to="." method="_login_pressed"]
